Try flex-shrink: 0 to avoid overlapping content

--- a/css/main.css
+++ b/css/main.css
@@ -60,6 +60,7 @@ section h2 {
   width: 90%;
   max-width: 40em;
   flex-grow: 1;
+  flex-shrink: 0;
 }
 
 .image-content {
